Fixed BG gradient
Made the gradient not look terrible (as it did not take up the whole screen before) and made it slightly more noticeable

--- a/site/css/master.css
+++ b/site/css/master.css
@@ -2,7 +2,8 @@
 
 html, body {
 	font-family: sans-serif;
-  background-image: linear-gradient(45deg, #6655ff, #3366ff);
+  background-image: linear-gradient(45deg, #6622ff, #3366ff);
+  background-attachment: fixed;
 }
 
 h1 {
